feat: 更新自动代码生成的内容